miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__env_field_methods.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: wrapper
---
#' @title Engine Class
#' @name Engine
#' @rdname Engine
#' @export
Engine <- new.env(parent = emptyenv())

# Engine::new (1:1)
#' @name Engine$new
#' @rdname Engine
Engine$new <- function(n) {
  if (!isTRUE(is.integer(n))) .miniextendr_arg_error("n", "must be integer")
  if (!isTRUE(length(n) == 1L)) .miniextendr_arg_error("n", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Engine__new, .call = sys.call(), n)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self <- .val
  class(self) <- "Engine"
  self
}

# Engine::size (1:1)
#' @name Engine$size
#' @rdname Engine
Engine$size <- function() {
  .val <- .Call(C_miniextendr_macros_Engine__size, .call = sys.call(), self)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
}

# Field syntax for the `#[r_data]` fields of Engine (`env(r_data_accessors)`).
if (!is.character(get0(".rdata_fields_Engine", envir = topenv(environment()), inherits = FALSE))) stop("`env(r_data_accessors)` on `Engine` needs the field helpers `#[derive(ExternalPtr)]` emits for a type with an `#[r_data]` `RSidecar` selector and a `pub` `#[r_data]` field", call. = FALSE)

#' @rdname Engine
#' @param self The object instance.
#' @param name A method or field name.
#' @export
`$.Engine` <- function(self, name) {
  if (!(!is.character(name) || length(name) != 1L || is.na(match(name, .rdata_fields_Engine)))) {
    .val <- .rdata_get_Engine(self, name)
    if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, environment()))
    return(.val)
  }
  obj <- Engine[[name]]
  if (is.environment(obj)) {
    # Trait namespace - wrap instance methods to prepend self
    bound <- new.env(parent = emptyenv())
    for (method_name in names(obj)) {
      method <- obj[[method_name]]
      if (is.function(method)) {
        if (isTRUE(attr(method, ".__mx_instance__"))) {
          local({
            m <- method
            bound[[method_name]] <<- function(...) m(self, ...)
          })
        } else {
          bound[[method_name]] <- method
        }
      }
    }
    bound
  } else if (is.null(obj)) {
    # Not found at top level -- search trait namespace environments
    for (ns_name in names(Engine)) {
      ns <- Engine[[ns_name]]
      if (is.environment(ns) && exists(name, envir = ns, inherits = FALSE)) {
        method <- ns[[name]]
        if (is.function(method) && isTRUE(attr(method, ".__mx_instance__"))) {
          # Instance method -- bind self as first arg
          m <- method
          s <- self
          return(function(...) m(s, ...))
        } else if (is.function(method)) {
          return(method)
        }
      }
    }
    if (!is.null(.rdata_live_Engine)) {
      .val <- .rdata_live_Engine(self, TRUE)
      if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, environment()))
    }
    NULL
  } else {
    environment(obj) <- environment()
    obj
  }
}
#' @rdname Engine
#' @export
`[[.Engine` <- `$.Engine`
#' @rdname Engine
#' @param x An object.
#' @param pattern A regular expression; the names matching it are the completions.
#' @exportS3Method utils::.DollarNames
.DollarNames.Engine <- function(x, pattern = "") {
  if (typeof(x) == "externalptr" && !is.null(.rdata_live_Engine) && !.rdata_live_Engine(x, FALSE)) return(character(0))
  grep(pattern, c(.rdata_fields_Engine, ls(Engine)), value = TRUE)
}
#' @rdname Engine
#' @param x An object.
#' @param value The new value of the field.
#' @method $<- Engine
#' @export
`$<-.Engine` <- function(x, name, value) {
  if (!is.character(name) || length(name) != 1L || is.na(match(name, .rdata_fields_Engine))) {
    if (typeof(x) == "externalptr" && is.character(name) && length(name) == 1L) .rdata_no_field_Engine(name, environment())
    return(NextMethod())
  }
  .val <- .rdata_set_Engine(x, name, value)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, environment()))
  x
}
#' @rdname Engine
#' @method [[<- Engine
#' @export
`[[<-.Engine` <- `$<-.Engine`
