miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_env_basic.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_env_r_wrapper(&parsed)
---
#' @title Counter Class
#' @name Counter
#' @rdname Counter
#' @export
Counter <- new.env(parent = emptyenv())

# Counter::new (1:1)
#' @description Create a new counter
#'
#' \describe{
#'   \item{\code{value}}{Initial value}
#' }
#' @name Counter$new
#' @rdname Counter
Counter$new <- function(value) {
  if (!isTRUE(is.integer(value))) .miniextendr_arg_error("value", "must be integer")
  if (!isTRUE(length(value) == 1L)) .miniextendr_arg_error("value", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Counter__new, .call = sys.call(), value)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self <- .val
  class(self) <- "Counter"
  self
}

# Counter::get (1:1)
#' @description Get the current value
#' @name Counter$get
#' @rdname Counter
Counter$get <- function() {
  .val <- .Call(C_miniextendr_macros_Counter__get, .call = sys.call(), self)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
}

# Counter::increment (1:1)
#' @description Increment by one
#' @name Counter$increment
#' @rdname Counter
Counter$increment <- function() {
  .val <- .Call(C_miniextendr_macros_Counter__increment, .call = sys.call(), self)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self
}

# Counter::add (1:1)
#' @description Add a value and return the result
#' @name Counter$add
#' @rdname Counter
Counter$add <- function(n) {
  if (!isTRUE(is.integer(n))) .miniextendr_arg_error("n", "must be integer")
  if (!isTRUE(length(n) == 1L)) .miniextendr_arg_error("n", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Counter__add, .call = sys.call(), self, n)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
}

# Counter::from_string (1:1)
#' @description Create from string
#' @name Counter$from_string
#' @rdname Counter
Counter$from_string <- function(s) {
  if (!isTRUE(is.character(s))) .miniextendr_arg_error("s", "must be character")
  if (!isTRUE(length(s) == 1L)) .miniextendr_arg_error("s", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Counter__from_string, .call = sys.call(), s)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  class(.val) <- "Counter"
  .val
}

#' @rdname Counter
#' @param self The object instance.
#' @param name Method name for dispatch.
#' @export
`$.Counter` <- function(self, name) {
  obj <- Counter[[name]]
  if (is.environment(obj)) {
    # Trait namespace - wrap instance methods to prepend self
    bound <- new.env(parent = emptyenv())
    for (method_name in names(obj)) {
      method <- obj[[method_name]]
      if (is.function(method)) {
        if (isTRUE(attr(method, ".__mx_instance__"))) {
          local({
            m <- method
            bound[[method_name]] <<- function(...) m(self, ...)
          })
        } else {
          bound[[method_name]] <- method
        }
      }
    }
    bound
  } else if (is.null(obj)) {
    # Not found at top level -- search trait namespace environments
    for (ns_name in names(Counter)) {
      ns <- Counter[[ns_name]]
      if (is.environment(ns) && exists(name, envir = ns, inherits = FALSE)) {
        method <- ns[[name]]
        if (is.function(method) && isTRUE(attr(method, ".__mx_instance__"))) {
          # Instance method -- bind self as first arg
          m <- method
          s <- self
          return(function(...) m(s, ...))
        } else if (is.function(method)) {
          return(method)
        }
      }
    }
    NULL
  } else {
    environment(obj) <- environment()
    obj
  }
}
#' @rdname Counter
#' @export
`[[.Counter` <- `$.Counter`
