miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_env_defaults.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
expression: generate_env_r_wrapper(&parsed)
---
#' @title Widget Class
#' @name Widget
#' @rdname Widget
#' @export
Widget <- new.env(parent = emptyenv())

# Widget::new (1:1)
#' @name Widget$new
#' @rdname Widget
Widget$new <- function() {
  .val <- .Call(C_miniextendr_macros_Widget__new, .call = sys.call())
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self <- .val
  class(self) <- "Widget"
  self
}

# Widget::update (1:1)
#' @name Widget$update
#' @rdname Widget
Widget$update <- function(step = 1L, verbose = FALSE) {
  if (!isTRUE(is.integer(step))) .miniextendr_arg_error("step", "must be integer")
  if (!isTRUE(length(step) == 1L)) .miniextendr_arg_error("step", "must have length 1")
  if (!isTRUE(is.logical(verbose))) .miniextendr_arg_error("verbose", "must be logical")
  if (!isTRUE(length(verbose) == 1L)) .miniextendr_arg_error("verbose", "must have length 1")
  .val <- .Call(C_miniextendr_macros_Widget__update, .call = sys.call(), self, step, verbose)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self
}

#' @rdname Widget
#' @param self The object instance.
#' @param name Method name for dispatch.
#' @export
`$.Widget` <- function(self, name) {
  obj <- Widget[[name]]
  if (is.environment(obj)) {
    # Trait namespace - wrap instance methods to prepend self
    bound <- new.env(parent = emptyenv())
    for (method_name in names(obj)) {
      method <- obj[[method_name]]
      if (is.function(method)) {
        if (isTRUE(attr(method, ".__mx_instance__"))) {
          local({
            m <- method
            bound[[method_name]] <<- function(...) m(self, ...)
          })
        } else {
          bound[[method_name]] <- method
        }
      }
    }
    bound
  } else if (is.null(obj)) {
    # Not found at top level -- search trait namespace environments
    for (ns_name in names(Widget)) {
      ns <- Widget[[ns_name]]
      if (is.environment(ns) && exists(name, envir = ns, inherits = FALSE)) {
        method <- ns[[name]]
        if (is.function(method) && isTRUE(attr(method, ".__mx_instance__"))) {
          # Instance method -- bind self as first arg
          m <- method
          s <- self
          return(function(...) m(s, ...))
        } else if (is.function(method)) {
          return(method)
        }
      }
    }
    NULL
  } else {
    environment(obj) <- environment()
    obj
  }
}
#' @rdname Widget
#' @export
`[[.Widget` <- `$.Widget`
