miniextendr-macros/src/miniextendr_impl/snapshots/miniextendr_macros__miniextendr_impl__tests__snapshot_env_match_arg_several_either.snap
---
source: miniextendr-macros/src/miniextendr_impl/tests.rs
assertion_line: 4918
expression: generate_env_r_wrapper(&parsed)
---
#' @title Picker Class
#' @name Picker
#' @rdname Picker
#' @export
Picker <- new.env(parent = emptyenv())

# Picker::new (1:1)
#' @name Picker$new
#' @rdname Picker
Picker$new <- function() {
  .val <- .Call(C_miniextendr_macros_Picker__new, .call = sys.call())
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  self <- .val
  class(self) <- "Picker"
  self
}

# Picker::pick (1:1)
#' @description Arguments of \code{Picker$pick()}:
#'
#' \describe{
#'   \item{\code{modes}}{.__MX_MATCH_ARG_PARAM_DOC_miniextendr_macros_Picker__pick_modes__}
#'   \item{\code{tags}}{One or more of "a", "b", or a number; omitting the argument means no choice.}
#' }
#' @name Picker$pick
#' @rdname Picker
Picker$pick <- function(modes = .__MX_MATCH_ARG_CHOICES_miniextendr_macros_Picker__pick_modes__, tags = c("a", "b")) {
  if (is.character(modes) || is.factor(modes)) modes <- .miniextendr_match_arg_several(modes, .__MX_MATCH_ARG_CHOICES_miniextendr_macros_Picker__pick_modes__, "modes", .__MX_MATCH_ARG_ALIASES_miniextendr_macros_Picker__pick_modes__)
  if (!missing(tags) && (is.character(tags) || is.factor(tags))) tags <- .miniextendr_match_arg_several(tags, c("a", "b"), "tags")
  .val <- .Call(C_miniextendr_macros_Picker__pick, .call = sys.call(), self, modes, if (missing(tags)) quote(expr=) else tags)
  if (inherits(.val, "rust_condition_value") && isTRUE(attr(.val, "__rust_condition__"))) return(.miniextendr_raise_condition(.val, sys.call()))
  .val
}

#' @rdname Picker
#' @param self The object instance.
#' @param name Method name for dispatch.
#' @export
`$.Picker` <- function(self, name) {
  obj <- Picker[[name]]
  if (is.environment(obj)) {
    # Trait namespace - wrap instance methods to prepend self
    bound <- new.env(parent = emptyenv())
    for (method_name in names(obj)) {
      method <- obj[[method_name]]
      if (is.function(method)) {
        if (isTRUE(attr(method, ".__mx_instance__"))) {
          local({
            m <- method
            bound[[method_name]] <<- function(...) m(self, ...)
          })
        } else {
          bound[[method_name]] <- method
        }
      }
    }
    bound
  } else if (is.null(obj)) {
    # Not found at top level -- search trait namespace environments
    for (ns_name in names(Picker)) {
      ns <- Picker[[ns_name]]
      if (is.environment(ns) && exists(name, envir = ns, inherits = FALSE)) {
        method <- ns[[name]]
        if (is.function(method) && isTRUE(attr(method, ".__mx_instance__"))) {
          # Instance method -- bind self as first arg
          m <- method
          s <- self
          return(function(...) m(s, ...))
        } else if (is.function(method)) {
          return(method)
        }
      }
    }
    NULL
  } else {
    environment(obj) <- environment()
    obj
  }
}
#' @rdname Picker
#' @export
`[[.Picker` <- `$.Picker`
